# BOGDANKA

./: .gitignore  LINK_VERIFICATION_REPORT.md  symulacja.md
PLC/: PLC_Typy_Danych.st  (+4 more)
src/simulation/: README.md  __init__.py  algo_metrics.md  algo_service.py  config.yaml  prompt-ai-simulation.md  pyproject.toml  pytest.ini  run_test_scenarios.py  simulation.md  weather_service.py
src/simulation/algo/: __init__.py  algorithm_rc.py  algorithm_rn.py  algorithm_ws.py  display.py  metrics.py  state.py  weather_client.py
src/simulation/common/: __init__.py  config.py  domain.py  telemetry.py  time_utils.py
src/simulation/docs/: plan.md  simulation.md  time-sync-comparison.md
src/simulation/scenarios/: README.md  generate_report.py  test_profiles.yaml
src/simulation/scenarios/test_results/: README.md  temp_config_profile_1_s3_baseline.yaml  temp_config_profile_2_s6_dual_line.yaml  test_results_20251126_164352.yaml  test_results_20251126_164519.yaml  test_results_20251126_164850.yaml  test_results_20251126_165119.yaml  test_results_20251126_165207.yaml  test_results_20251127_110419.yaml  test_results_20251129_122602.yaml  test_results_20251129_125633.yaml  test_results_20251129_125811.yaml  test_results_20251129_125836.yaml  test_results_20251129_130135.yaml  (+4 more)
src/simulation/tests/: test_algorithm_rc.py  test_algorithm_rn.py  test_algorithm_ws.py  test_domain.py
src/simulation/ut/: test_algorithm_rc.py  test_algorithm_rn.py  test_config.py  test_time_utils.py  test_weather_service_endpoint.py  test_winter_profile.py
src/simulation/weather/: __init__.py  profile.py
(+52 files in other folders)
